--- a/ISA-AI.html
+++ b/ISA-AI.html
@@ -24,7 +24,7 @@
 
   <script>
     // Check if the current URL contains the specified string
-    if (window.location.href.includes("https://glitchy-m.github.io/glitchy-m/ISA-AI")) {
+    if (window.location.href.includes("glitchy-m.github.io/glitchy-m/ISA-AI")) {
       // If the URL contains the specified string, load the original content
       document.body.innerHTML = `
         <header>
